# rl_introduction

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  requierments.txt  requirements.txt  requirements_mujoco.txt  requirments.txt  setup.py
.github/: enforce-folder-permissions.yml
notebooks/: 1_Environment_Agent-Correction.ipynb  1_Environment_Agent.ipynb  1_introduction_environment.ipynb  2_Dynamic_Programming-Copy1.ipynb  2_Dynamic_Programming-Correction.ipynb  2_Dynamic_Programming.ipynb  2_dynamic-programming.ipynb  3_Q_learning.ipynb  3_Temporal-Difference.ipynb  3_Temporal_Difference-Copy1.ipynb  3_Temporal_Difference.ipynb  4_RL_framework-correction.ipynb  4_RL_framework.ipynb  4_deep_Q-learning.ipynb  4_deep_Q_learning.ipynb  5_policy_gradient-reinforce.ipynb  6_RL_framework.ipynb  Exploration_exploitation.ipynb  I) introduction_environment.ipynb  II) Q-learning_Discrete-Action-State-Space.ipynb  II) RL_Discrete-Action-State-Space.ipynb  II) Temporal-Difference-Learning_Discrete-Action-State-Space.ipynb  II) Temporal-Difference.ipynb  II) dynamic-programming.ipynb  III) Temporal-Difference.ipynb  III) deep_Q-learning.ipynb  III) policy gradient - reinforce.ipynb  IV) deep_Q-learning.ipynb  IV) policy gradient - reinforce.ipynb  TP1_RL_Environment_And_Agent.ipynb  Untitled.ipynb  V) policy gradient - reinforce.ipynb  V) policy gradient Actor Critic.ipynb  VI) policy gradient Actor Critic.ipynb  VII) RL_framework.ipynb  VII) benchmarks.ipynb  VII) packages_presentation.ipynb  agent.py  benchmark.ipynb  deep_Q-learning.ipynb  (+3 more)
src/: mountain.py
(+19 files in other folders)
