[tool.poetry]
name = "rl_introduction"
version = "0.1.0"
description = ""
authors = ["racousin <racousin@student.42.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
